--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: black;
+}
+
 #imagenCentral{
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./IMAGENES/Central/imagenCentral.png");
     height: 650px;
@@ -6,21 +10,42 @@
     background-size: cover;
     position: relative;
     overflow: hidden;
-    
-  }
-
-body {
-    background-color: black;
 }
 
-ul{
-    text-align: left;
+
+h1 {
+    color: rgb(155, 116, 17);
+}
+
+
+h3 {
+    color: rgb(155, 116, 17);
+}
+
+p, label {
     color: bisque;
-    padding: 0;
 }
 
+
+h5 {
+    color: goldenrod;
+}
 h6 {
     text-align: left;
-    color: bisque;
+    color: goldenrod;
     padding: 0;
+}
+
+#footer {
+    width: 100%;
+    bottom: 0;
+    color: goldenrod;
+}
+ul{
+    text-align: left;
+    
+    padding: 0;
+}
+a {
+    color: bisque;
 }
